fixed issues with the saved characters, updated the intro paragaph, and changed button hovers

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,7 +1,3 @@
-:root {
-    --dark-grey: rgb(37, 37, 38);
-}
-
 html {
     font-size: 16px;
 }
@@ -13,7 +9,6 @@ html {
 }
 
 body {
-    background-color: var(--dark-grey);
     color: white;
     font-family: montserrat, sans-serif;
     overflow-x: hidden;
@@ -42,8 +37,9 @@ main {
 }
 
 p {
-    font-size: 1.2rem;
-    line-height: 1.5rem;
+    font-size: 1rem;
+    line-height: 1.4rem;
+    letter-spacing: 0.02rem;
 }
 
 #generate {
@@ -56,24 +52,29 @@ p {
     font-weight: 900;
 }
 
-#show-saved-char, #dlt-saved-char {
-    width: 100%;
-    margin-top: 20px;
-}
-
-/* saved characters */
-.saved-characters {
-    width: 100vw;
-}
-
 .saved-char-btn {
     background-color: transparent;
     border: 2px solid #78909c;
     line-height: 30px;
 }
 
-.saved-char-btn:hover {
+.saved-char-btn:hover, #show-saved-char:focus {
     background-color: #78909c;
+}
+
+#show-saved-char, #dlt-saved-char {
+    width: 100%;
+    margin-top: 20px;
+}
+
+#dlt-saved-char:hover, #dlt-saved-char:focus   {
+    background-color: #d32f2f;
+    border-color: #d32f2f;
+}
+
+/* saved characters */
+.saved-characters {
+    width: 100vw;
 }
 
 /* search results */
@@ -159,7 +160,7 @@ p strong {
 /* media queries */
 @media screen and (min-width: 769px) {
     .logo {
-        width: 80%;
+        width: 60%;
     }
 
     p {
@@ -186,6 +187,7 @@ p strong {
 
 @media screen and (min-width: 1440px) {
     p {
-        font-size: 1.75rem;
+        font-size: 1.4rem;
+        line-height: 2rem;
     }
 }
